The DOM is refreshed only one time instead of each result in the autoload

--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
 <div id="result" style="margin-left: 3px;width: 150px;border-left: solid black 1px;border-right: solid black 1px;border-bottom: solid black 1px;"  ></div>
 
 <script>
-    var canvas = document.getElementById('carte_ratp');
-    var context = canvas.getContext('2d');
-    var autoload = document.getElementById('subject');
-    var submit = document.getElementById('submit');
-    var res = document.getElementById("result");
-    var station;
-    var stations;
-    var userAnswers = [];
+var canvas = document.getElementById('carte_ratp');
+var context = canvas.getContext('2d');
+var autoload = document.getElementById('subject');
+var submit = document.getElementById('submit');
+var res = document.getElementById("result");
+var sub = document.getElementById("subject");
+var station;
+var stations;
+var userAnswers = [];
 
-    window.onload = function()
-    {
-        var goodAnswers = [];
-        request(readData);
+window.onload = function()
+{
+    var goodAnswers = [];
+    request(readData);
 
-        autoload.onkeyup = function(){
-            refreshAC(stations);
-        }
+    autoload.onkeyup = function(){
+        refreshAC(stations);
+    }
 
-        submit.onclick = function(){
+    submit.onclick = function(){
+        if(sub.innerHTML != ''){
             var userStation = autoload.dataset.id;
 
             //stock user answer
@@ -60,164 +62,165 @@
             clearInput(autoload);
             station = drawRandomCircle(stations, canvas, 'red');
         }
+
     }
+}
 
-    /**
-     *
-     */
-    function request(callback){
-        var xhr = getXMLHttpRequest();
-        var url = "requests.php";
-        var method = "GET";
-        var sync = true;
+/**
+ *
+ */
+function request(callback){
+    var xhr = getXMLHttpRequest();
+    var url = "requests.php";
+    var method = "GET";
+    var sync = true;
 
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState == 4 && (xhr.status == 200 || xhr.status == 0)) {
-                callback(xhr.responseText);
-            }
-        };
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState == 4 && (xhr.status == 200 || xhr.status == 0)) {
+            callback(xhr.responseText);
+        }
+    };
 
-        xhr.open(method, url, sync);
-        xhr.send(null);
-    }
+    xhr.open(method, url, sync);
+    xhr.send(null);
+}
 
-    function clearInput(input){
-        input.value = '';
-    }
+function clearInput(input){
+    input.value = '';
+}
 
-    /**
-     * @param rawData
-     */
-    function readData(rawData){
-        stations = JSON.parse(rawData).filter(isMetro);
-        station = drawRandomCircle(stations, canvas, 'red');
-    }
+/**
+ * @param rawData
+ */
+function readData(rawData){
+    stations = JSON.parse(rawData).filter(isMetro);
+    station = drawRandomCircle(stations, canvas, 'red');
+}
 
-    /**
-     * @param stations
-     * @param canvas
-     * @param color
-     * @return station
-     */
-    function drawRandomCircle(stations, canvas, color){
-        var station = stations[random(stations)];
-        drawCircle(canvas, station.x, station.y, context, color);
-        return station;
-    }
+/**
+ * @param stations
+ * @param canvas
+ * @param color
+ * @return station
+ */
+function drawRandomCircle(stations, canvas, color){
+    var station = stations[random(stations)];
+    drawCircle(canvas, station.x, station.y, context, color);
+    return station;
+}
 
-    function clearCanvas(context, canvas){
-        context.clearRect(0, 0, canvas.width, canvas.height);
-    }
+function clearCanvas(context, canvas){
+    context.clearRect(0, 0, canvas.width, canvas.height);
+}
 
 
-    function isMetro(station){
-        return (station.type == 'metro');
-    }
+function isMetro(station){
+    return (station.type == 'metro');
+}
 
-    /**
-     * Charge l'objet HttpRequest
-     */
+/**
+ * Charge l'objet HttpRequest
+ */
 
-    function getXMLHttpRequest() {
-        var xhr = null;
-        if (window.XMLHttpRequest || window.ActiveXObject) {
-            if (window.ActiveXObject) {
-                try {
-                    xhr = new ActiveXObject("Msxml2.XMLHTTP");
-                } catch(e) {
-                    xhr = new ActiveXObject("Microsoft.XMLHTTP");
-                }
-            } else {
-                xhr = new XMLHttpRequest();
+function getXMLHttpRequest() {
+    var xhr = null;
+    if (window.XMLHttpRequest || window.ActiveXObject) {
+        if (window.ActiveXObject) {
+            try {
+                xhr = new ActiveXObject("Msxml2.XMLHTTP");
+            } catch(e) {
+                xhr = new ActiveXObject("Microsoft.XMLHTTP");
             }
         } else {
-            alert("Votre navigateur ne supporte pas l'objet XMLHTTPRequest...");
-            return null;
+            xhr = new XMLHttpRequest();
         }
-
-        return xhr;
+    } else {
+        alert("Votre navigateur ne supporte pas l'objet XMLHTTPRequest...");
+        return null;
     }
 
-    /**
-     * Draw a circle at a specific location within the canvas
-     * @param canvas
-     * @param x
-     * @param y
-     * @param context
-     */
-    function drawCircle(canvas, x, y, context, color){
-        var RESIZE = 10;
-        var RADIUS = 4;
+    return xhr;
+}
 
-        context.beginPath();
-        context.arc(x/RESIZE, y/RESIZE, RADIUS, 0, 2 * Math.PI, false);
-        context.fillStyle = color;
-        context.fill();
-        context.stroke();
-    }
+/**
+ * Draw a circle at a specific location within the canvas
+ * @param canvas
+ * @param x
+ * @param y
+ * @param context
+ */
+function drawCircle(canvas, x, y, context, color){
+    var RESIZE = 10;
+    var RADIUS = 4;
 
-    /**
-     *
-     */
-    function drawText(name, x, y, context){
-        var RESIZE = 10;
-        context.font = "bold 8px Arial";
-        context.fillStyle = 'black';
-        context.fillText(name, x/RESIZE, y/RESIZE);
-    }
+    context.beginPath();
+    context.arc(x/RESIZE, y/RESIZE, RADIUS, 0, 2 * Math.PI, false);
+    context.fillStyle = color;
+    context.fill();
+    context.stroke();
+}
 
-    /**
-     * Return a random number between 0 and the number of object inside tab
-     * @param tab
-     * @returns {number}
-     */
-    function random( tab )
-    {
-        return Math.floor(tab.length * Math.random());
-    }
+/**
+ *
+ */
+function drawText(name, x, y, context){
+    var RESIZE = 10;
+    context.font = "bold 8px Arial";
+    context.fillStyle = 'black';
+    context.fillText(name, x/RESIZE, y/RESIZE);
+}
 
-    /**
-     * Refresh the autocomplete
-     */
-    function refreshAC(stations)
-    {
-        try{
-            var sub = document.getElementById("subject");
-            var val = sub.value;
+/**
+ * Return a random number between 0 and the number of object inside tab
+ * @param tab
+ * @returns {number}
+ */
+function random( tab )
+{
+    return Math.floor(tab.length * Math.random());
+}
 
-            res.innerHTML = "";
-            var autoloadContent ='';
-            if( val != "" )
-            {
-                stations.forEach(function(station){
-                    var rgxp = new RegExp('^'+val, "g");
-                    if(station.name.match(rgxp) != null && station.name.match(rgxp).length){
-                        autoloadContent += "<div id="+station.id+" onmouseout='selectionPointer2(this)' onmouseover='selectionPointer(this)' onclick='selectionClique(this)'>"+station.name+"</div>";
-                    }
-                });
-            }
-            res.innerHTML = autoloadContent;
-        }
-        catch (err){
-            console.log(err);
-        }
-    }
-
-    function selectionPointer2( element )
-    {
-        element.style.backgroundColor = "white";
-    }
-    function selectionPointer( element )
-    {
-        element.style.backgroundColor = "green";
-    }
-    function selectionClique( element )
-    {
+/**
+ * Refresh the autocomplete
+ */
+function refreshAC(stations)
+{
+    try{
         var sub = document.getElementById("subject");
-        sub.dataset.id = element.id;
-        sub.value = element.innerHTML;
+        var val = sub.value;
+
         res.innerHTML = "";
+        var autoloadContent ='';
+        if( val != "" )
+        {
+            stations.forEach(function(station){
+                var rgxp = new RegExp('^'+val, "g");
+                if(station.name.match(rgxp) != null && station.name.match(rgxp).length){
+                    autoloadContent += "<div id="+station.id+" onmouseout='selectionPointer2(this)' onmouseover='selectionPointer(this)' onclick='selectionClique(this)'>"+station.name+"</div>";
+                }
+            });
+        }
+        res.innerHTML = autoloadContent;
     }
+    catch (err){
+        console.log(err);
+    }
+}
+
+function selectionPointer2( element )
+{
+    element.style.backgroundColor = "white";
+}
+function selectionPointer( element )
+{
+    element.style.backgroundColor = "green";
+}
+function selectionClique( element )
+{
+    sub.dataset.id = element.id;
+    sub.value = element.innerHTML;
+    res.innerHTML = "";
+}
 
 </script>
 </body>
