--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style type="text/css" media="screen">
         canvas, img { display:block; margin:1em auto; border:1px solid black; }
         canvas { background:url('content/carte.jpg') }
+        #quest{ width: 270px;margin: auto;}
     </style>
 </head>
 <body>
@@ -13,12 +14,13 @@
 <canvas id="carte_ratp" width="810" height="808">
     L'objet Canvas ne marche pas chez vous, veuillez utiliser un navigateur récent.
 </canvas>
-
+<div id="quest">
 <h2>Quelle est cette station ?</h2>
 <input type="text" name="subject" id="subject"  />
 <button id="submit">Valider</button>
 <div id="result" style="margin-left: 3px;width: 150px;border-left: solid black 1px;border-right: solid black 1px;border-bottom: solid black 1px;"  ></div>
-
+<div id="indicatiion"></div>
+</div>
 <script>
 var canvas = document.getElementById('carte_ratp');
 var context = canvas.getContext('2d');
@@ -26,9 +28,15 @@ var autoload = document.getElementById('subject');
 var submit = document.getElementById('submit');
 var res = document.getElementById("result");
 var sub = document.getElementById("subject");
+var ind = document.getElementById("indicatiion");
+
 var station;
 var stations;
 var userAnswers = [];
+var question = 1;
+var score = 0;
+
+
 
 window.onload = function()
 {
@@ -55,12 +63,26 @@ window.onload = function()
             console.log('userStation: ' + userStation)
             if(userStation == station.id){
                 console.log('On lui rajoute un point');
+                score++;
+                ind.innerHTML = "Bonne réponse";
+
             }else{
                 console.log('on indique le fail');
+                ind.innerHTML = "Mauvaise réponse";
             }
-            clearCanvas(context, canvas);
-            clearInput(autoload);
-            station = drawRandomCircle(stations, canvas, 'red');
+            question++;
+            if( question >= 10 )
+            {
+                document.getElementById("carte_ratp").style.display = "none";
+                document.getElementById("quest").innerHTML = "Merci d'avoir joué, Vous avez un score de "+score+"/10";
+
+            }
+            else
+            {
+                clearCanvas(context, canvas);
+                clearInput(autoload);
+                station = drawRandomCircle(stations, canvas, 'red');
+            }
         }
 
     }
@@ -73,8 +95,7 @@ function request(callback){
     var xhr = getXMLHttpRequest();
     var url = "requests.php";
     var method = "GET";
-    var sync = true;
-
+    var sync = false;
     xhr.onreadystatechange = function() {
         if (xhr.readyState == 4 && (xhr.status == 200 || xhr.status == 0)) {
             callback(xhr.responseText);
